# wxgdpad

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  org.gdpad.wx.json  vcpkg.json  wxgdpad.cpp  wxgdpad.h
include/: wxgdpad.h
src/: wxgdpad.cpp
